Fix: Profile section alignment (text and image)

--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ section {
 .profile {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 5rem;
   height: 80vh;
 }
@@ -190,15 +191,16 @@ section {
   max-height: 400px;
   width: auto;
   height: auto;
+  aspect-ratio: 1;
   border-radius: 50%;
   }
 
 
 .section__text {
-
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   align-self: center;
   text-align: center;
 }
